# django-unmanaged-assistant

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  conftest.py  pyproject.toml  requirements.txt
django_unmanaged_assistant/: apps.py
django_unmanaged_assistant/management/commands/: create_unmanaged_tables.py
django_unmanaged_assistant/tests/: test_create_unmanaged_tables.py
django_unmanaged_assistant/tests/multi_db_project_with_router/: manage.py
django_unmanaged_assistant/tests/multi_db_project_with_router/managed/: apps.py  models.py
django_unmanaged_assistant/tests/multi_db_project_with_router/mixed/: apps.py  models.py
django_unmanaged_assistant/tests/multi_db_project_with_router/multi_db_project_with_router/: asgi.py  dbrouters.py  settings.py  wsgi.py
django_unmanaged_assistant/tests/multi_db_project_with_router/unmanaged/: models.py
django_unmanaged_assistant/tests/multi_db_project_with_router/unmanaged_venv/: models.py
django_unmanaged_assistant/tests/multi_db_project_with_using/: manage.py
django_unmanaged_assistant/tests/multi_db_project_with_using/mixed/: managers.py  models.py
django_unmanaged_assistant/tests/multi_db_project_with_using/multi_db_project_with_using/: asgi.py  settings.py  urls.py  wsgi.py
django_unmanaged_assistant/tests/multi_db_project_with_using/unmanaged/: managers.py  models.py
django_unmanaged_assistant/tests/multi_db_project_with_using/unmanaged_venv/: apps.py  managers.py  models.py
django_unmanaged_assistant/tests/single_db_project/: manage.py
django_unmanaged_assistant/tests/single_db_project/managed/: apps.py  models.py
django_unmanaged_assistant/tests/single_db_project/mixed/: apps.py  models.py
django_unmanaged_assistant/tests/single_db_project/single_db_project/: asgi.py  settings.py  urls.py  wsgi.py
django_unmanaged_assistant/tests/single_db_project/unmanaged/: apps.py  models.py
django_unmanaged_assistant/tests/single_db_project/unmanaged_venv/: apps.py  models.py
management/commands/: create_databases.py  create_unmanaged_tables.py
requirements/: base.txt
tests/: conftest.py  test_create_unmanaged_tables.py  test_settings.py
tests/test_app/: apps.py  models.py
